Instead use widht 330px use native

--- a/apps/kitchen_display/templates/kitchen_display/displaykitchen.html
+++ b/apps/kitchen_display/templates/kitchen_display/displaykitchen.html
@@ -27,7 +27,7 @@
           <!-- Card component -->
         {% for order in orders %}
           <section
-            class="w-[330px] max-w-full shrink-0 bg-white rounded-md shadow-sm border border-gray-200"
+            class="w-82.5 max-w-full shrink-0 bg-white rounded-md shadow-sm border border-gray-200"
           >
             <div class="px-4 pt-4 pb-3">
               <div class="flex items-start justify-between">
