Update when sub total and pay is minus than not just display 0, but with -

--- a/apps/point_off_sale/templates/point_off_sale/index.html
+++ b/apps/point_off_sale/templates/point_off_sale/index.html
@@ -203,10 +203,9 @@
               payment: '',
               subtotal: 0,
               get change() {
-                const pay = Number(this.payment || 0);
-                const chg = pay - this.subtotal;
-                return chg > 0 ? chg : 0;
-              }
+              const pay = Number(this.payment || 0);
+              return pay - this.subtotal;
+            }
             }"
             @cart-subtotal-updated.window="
               // debug: lihat isi event di console
