--- a/apps/point_off_sale/templates/point_off_sale/snippets/popup-confirm-payment.html
+++ b/apps/point_off_sale/templates/point_off_sale/snippets/popup-confirm-payment.html
@@ -51,7 +51,7 @@
           Cancel
         </button>
         <button
-          type="button"
+          type="submit"
           class="px-3 py-2 text-xs rounded bg-green-600 text-white font-semibold hover:bg-green-700"
           id="confirm-payment"
         >
