Add Plus button that can handle cart order

--- a/apps/point_off_sale/templates/point_off_sale/snippets/popup-confirm-payment.html
+++ b/apps/point_off_sale/templates/point_off_sale/snippets/popup-confirm-payment.html
@@ -1,5 +1,6 @@
 <div
     x-show="previewOpen"
+    x-cloak
     x-transition.opacity
     class="fixed inset-0 z-40 flex items-end md:items-center justify-center bg-black/40"
     @click.self="previewOpen = false"
