--- a/apps/point_off_sale/templates/point_off_sale/index.html
+++ b/apps/point_off_sale/templates/point_off_sale/index.html
@@ -127,10 +127,17 @@
                   type="button"
                   class="px-2 py-1 text-xs rounded bg-gray-100 text-gray-600 order-item-minus"
                 >-</button>
+              
                 <div class="font-semibold text-gray-800 order-item-total"></div>
+              
+                <button
+                  type="button"
+                  class="px-2 py-1 text-xs rounded bg-gray-100 text-gray-600 order-item-plus"
+                >+</button>
               </div>
             </div>
           </template>
+          
       
           <!-- Total -->
           <div id="order-total" class="hidden pt-4 border-t border-gray-200 mt-4">
@@ -167,6 +174,7 @@
           <!-- Dropdown kecil di atas tombol -->
           <div
           x-show="showOrderType"
+          x-cloak
           x-transition
             class="absolute bottom-full right-0 mb-1 w-40 bg-white border border-gray-200 rounded-lg shadow-lg text-xs z-30"
             @click.outside="showOrderType = false"
