Add search button tha can handle search menu

--- a/apps/point_off_sale/templates/point_off_sale/snippets/header.html
+++ b/apps/point_off_sale/templates/point_off_sale/snippets/header.html
@@ -58,6 +58,7 @@
         </svg>
         <input 
           type="text" 
+          id="menu-search"
           placeholder="Search products..." 
           class="text-sm outline-none w-full bg-transparent"
         >
