Add base htmx cdn

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,11 @@
 
     <!-- Local Fonts -->
     <link rel="stylesheet" href="{% static 'css/fonts.css' %}" /> 
-
     <!-- Alpine.js -->
     <script defer src="{% static 'js/alpine.min.js' %}"></script>
-
+    <!-- Ajax -->
+    <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+    
     {% block style %}{% endblock %}
   </head>
 
