update link orders to default dine in

--- a/apps/point_off_sale/templates/point_off_sale/snippets/header.html
+++ b/apps/point_off_sale/templates/point_off_sale/snippets/header.html
@@ -17,7 +17,7 @@
            {% endif %}">
            Register
         </a>
-        <a href="{% url 'orderlist' %}"
+        <a href="{% url 'orderlist' %}?type=dine_in"
            class="shrink-0 px-3 py-1.5 rounded border border-gray-300 text-sm font-medium
            {% if current == 'orderlist' %}
                bg-white text-gray-800 font-semibold shadow-sm
