--- a/apps/point_off_sale/templates/point_off_sale/snippets/order_list/right-panel.html
+++ b/apps/point_off_sale/templates/point_off_sale/snippets/order_list/right-panel.html
@@ -1,4 +1,4 @@
-<div id="right-panel" class="flex flex-col bg-white overflow-hidden border-l border-gray-100 h-full">
+<section id="right-panel" class="flex flex-col bg-white overflow-hidden border-l border-gray-100 h-full">
   <!-- Header -->
   <div class="p-4 border-b border-gray-200 shrink-0">
     <h2 class="text-sm font-semibold text-gray-500 uppercase tracking-wide">#{{ object.id }}</h2>
@@ -42,4 +42,4 @@
       </button>
     </div>
   </div>
-</div>
+</section>
