Update viewpoint that full in screen

--- a/apps/point_off_sale/templates/point_off_sale/order_list.html
+++ b/apps/point_off_sale/templates/point_off_sale/order_list.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="min-h-screen w-full bg-gray-100 font-sans flex flex-col">
+<div class="h-screen w-full bg-gray-100 font-sans flex flex-col">
 
   {% include "point_off_sale/snippets/header.html" with show_search=False %}
   {% include "point_off_sale/snippets/alert.html" %}
