Add cloack that backdrop mobile not show up when not needed

--- a/apps/point_off_sale/templates/point_off_sale/index.html
+++ b/apps/point_off_sale/templates/point_off_sale/index.html
@@ -360,6 +360,7 @@
       id="order-backdrop"
       class="fixed inset-0 bg-black/40 z-20 md:hidden"
       x-show="orderOpen"
+      x-cloak
       x-transition.opacity
       @click="orderOpen = false"
       ></div>
