Cloack just work in Android when id is order-panel

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -22,3 +22,10 @@
 [x-cloak] {
   display: none !important;
 }
+
+/* Cloack just work on android in order pannel ID */
+@media (min-width: 768px) {
+  #order-panel[x-cloak] {
+    display: flex !important;
+  }
+}
