Add handling send button type is direct_payment

--- a/apps/point_off_sale/templates/point_off_sale/snippets/popup-confirm-payment.html
+++ b/apps/point_off_sale/templates/point_off_sale/snippets/popup-confirm-payment.html
@@ -57,6 +57,11 @@
           id="confirm-payment"
           :disabled="submitting"
           x-text="submitting ? 'Processing...' : 'Confirm & Save'"
+          @click.prevent="
+            button_type = 'direct_payment';
+            submitting = true;
+            $nextTick(() => $el.closest('form').submit());
+          "
         >
           Confirm & Save
         </button>
